...
                                            </connections>
                                        </button>
                                        <textField identifier="field_ID" verticalHuggingPriority="750" tag="100" id="emm-fQ-au8">
                                            <rect key="frame" x="126" y="21" width="48" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <popUpButton identifier="popup_DLC" verticalHuggingPriority="750" id="Ups-U9-hvC">
                                            <rect key="frame" x="179" y="18" width="48" height="25"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </popUpButton>
                                        <textField identifier="field_D0" verticalHuggingPriority="750" tag="1" id="LK8-8r-3GU">
                                            <rect key="frame" x="231" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <textField identifier="field_D1" verticalHuggingPriority="750" tag="2" id="YPU-Ed-Iwj">
                                            <rect key="frame" x="279" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <textField identifier="field_D2" verticalHuggingPriority="750" tag="3" id="diM-Jf-GNv">
                                            <rect key="frame" x="328" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <textField identifier="field_D3" verticalHuggingPriority="750" tag="4" id="DmH-jj-RBe">
                                            <rect key="frame" x="376" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <textField identifier="field_D4" verticalHuggingPriority="750" tag="5" id="Tbk-of-wGg">
                                            <rect key="frame" x="424" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <textField identifier="field_D5" verticalHuggingPriority="750" tag="6" id="2sE-BS-iwc">
                                            <rect key="frame" x="472" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <textField identifier="field_D6" verticalHuggingPriority="750" tag="7" id="BWZ-jy-adX">
                                            <rect key="frame" x="520" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </textField>
                                        <textField identifier="field_D7" verticalHuggingPriority="750" tag="8" id="BJi-Bp-jSN">
                                            <rect key="frame" x="568" y="21" width="40" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
