...
            if textField == o_ID {
                let stringValue = textField.stringValue
                if let n = Int(stringValue, radix: 16) {
                    if n > 0x7FF {
                        let n11 = n & 0x7FF
                        let newValue = (textField.formatter?.string(for: n11))!
                        let alert = NSAlert()
                        alert.messageText = "Value is too large!"
                        alert.informativeText = "\"\(stringValue)\" exceeds 11 bits;  truncating to \"\(newValue).\"  Have a wonderful day."
                        alert.beginSheetModal(for: view.window!) { (response) in
                            textField.stringValue = newValue
                            textField.becomeFirstResponder()
                        }
...
